--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
     padding: 5% 0;
     font-family: 'sans-serif';
     margin: 0 auto;
-    width: 30%; }
+    min-width: 300px;
+    max-width: 450px; }
     body .container .city {
       background: #1F5C8B;
       padding: 0 15px; }
