--- a/style.scss
+++ b/style.scss
@@ -24,10 +24,13 @@ body{
         list-style:none;
     }
     .container{
+        //border: 2px solid black;
         padding: 5% 0;
         font-family: 'sans-serif';
         margin: 0 auto;
-        width: 30%;
+        min-width: 300px;
+        max-width: 450px;
+        //width: 30%;
         //border:2px solid black;
         .city{
             //border: 2px solid green;
